--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+# File to keep secrets and other configuration that
+# should not be in the codebase or git repository
+
 PORT = 3000
 SESSION_SECRET = 'secret'
